--- a/pet/pet.html
+++ b/pet/pet.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <form>
+    <form id="pet">
       <div>
         <label for="petname">Enter your pet name:</label>
         <input type="text" id="petname" required />
@@ -43,7 +43,7 @@
         <input type="text" id="breed" />
       </div>
       <div>
-        <button type="button">Send</button>
+        <button type="submit">Send</button>
       </div>
     </form>
     <div>
